# scratch-pydantic-ai

./: README.md  pyproject.toml
src/scratch_pydantic_ai/: __init__.py  scratch.py
